# graphics_project

./: .gitignore  README.md  report.md
code/: CMakeLists.txt  run_all.sh
code/include/: camera.hpp  curve.hpp  group.hpp  image.hpp  light.hpp  material.hpp  mesh.hpp  meshtriangle.hpp  plane.hpp  revsurface.hpp  scene_parser.hpp  sphere.hpp  surfacelight.hpp  texture.hpp  transform.hpp  triangle.hpp
code/src/: main.cpp  mesh.cpp  scene_parser.cpp
code/testcases/: demo.txt  scene01_path_tracing.txt  scene02_path_tracing.txt  scene03_ray_tracing.txt
